salesforce_sfdx_QA/main/default/objects/Project_Payment__c/fields/Check_Amount__c.field-meta.xml
<CustomField>
    <fullName>Check_Amount__c</fullName>
    <label>Check Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>