salesforce_sfdx_QA/main/default/objects/Project_Payment__c/fields/Check_Number__c.field-meta.xml
<CustomField>
    <fullName>Check_Number__c</fullName>
    <label>Check Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>