salesforce_sfdx_QA/main/default/objects/Project_Payment__c/fields/ORACLE_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>ORACLE_Invoice_Amount__c</fullName>
    <label>ORACLE Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>