salesforce_sfdx_QA/main/default/objects/Project_Payment__c/fields/Payment_Batch__c.field-meta.xml
<CustomField>
    <fullName>Payment_Batch__c</fullName>
    <label>Payment Batch</label>
    <referenceTo>Payment_Batch__c</referenceTo>
    <relationshipLabel>Project Payments</relationshipLabel>
    <relationshipName>Project_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>