salesforce_sfdx_QA/main/default/objects/Project_Payment__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted for payment</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Negotiable</fullName>
            </value>
            <value>
                <fullName>Reconciled</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
            <value>
                <fullName>Approved by Program Manager</fullName>
            </value>
            <value>
                <fullName>Submitted for Program Manager Approval</fullName>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Re-Submitted for Program Manager Approval</fullName>
            </value>
            <value>
                <fullName>Rejected by FP&amp;A</fullName>
            </value>
            <value>
                <fullName>Return Security</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>