salesforce_sfdx_QA/main/default/objects/Project_Payment__c/fields/POET__c.field-meta.xml
<CustomField>
    <fullName>POET__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Billing Information</label>
    <referenceTo>POET__c</referenceTo>
    <relationshipLabel>Project Payments</relationshipLabel>
    <relationshipName>Project_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>