salesforce_sfdx_QA/main/default/objects/Project_Payment__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>vlocity_cmt__Application__c</referenceTo>
    <relationshipLabel>Project Payments</relationshipLabel>
    <relationshipName>Project_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>