salesforce_sfdx_QA/main/default/objects/Project_Payment__c/fields/Project_Status_When_Generated__c.field-meta.xml
<CustomField>
    <fullName>Project_Status_When_Generated__c</fullName>
    <label>Project Status When Generated</label>
    <length>100</length>
    <type>Text</type>
</CustomField>