salesforce_sfdx_QA/main/default/objects/Project_Payment__c/fields/Sundry_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Sundry_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Sundry External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>