salesforce_sfdx_QA/main/default/objects/Project_Payment__c/fields/Vendor_Site_Code__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Site_Code__c</fullName>
    <label>Vendor Site Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>